--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,18 @@ dependencies {
     compile("org.springframework:spring-tx:${springVersion}")
     // https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons
     compile group: 'org.springframework.data', name: 'spring-data-commons', version: '1.13.7.RELEASE'
-    compile('com.tinkerpop.blueprints:blueprints-core:2.6.0')
-    compile('com.tinkerpop.gremlin:gremlin-java:2.6.0')
+    // https://mvnrepository.com/artifact/org.apache.tinkerpop/gremlin-driver
+    compile group: 'org.apache.tinkerpop', name: 'gremlin-driver', version: '3.0.1-incubating'
+    // https://mvnrepository.com/artifact/org.apache.tinkerpop/gremlin-server
+    testCompile group: 'org.apache.tinkerpop', name: 'gremlin-server', version: '3.0.1-incubating'
+
     compile('org.apache.commons:commons-collections4:4.1')
     compile('org.apache.commons:commons-lang3:3.6')
-    // https://mvnrepository.com/artifact/org.apache.tinkerpop/gremlin-core
-    compile group: 'org.apache.tinkerpop', name: 'gremlin-core', version: '3.3.0'
     // https://mvnrepository.com/artifact/org.reflections/reflections
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    // https://mvnrepository.com/artifact/com.thinkaurelius.titan/titan-cassandra
+    compile group: 'com.thinkaurelius.titan', name: 'titan-cassandra', version: '1.0.0'
+
+    // https://mvnrepository.com/artifact/org.apache.tinkerpop/tinkerpop
+    compile group: 'org.apache.tinkerpop', name: 'tinkerpop', version: '3.0.1-incubating', ext: 'pom'
 }
